# knowledge-architecture-evaluations

./: .coderabbit.yaml  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
data/: chunking_strategies.ipynb  embedding_strategies.ipynb  loader.py  pre_process_qa_data.ipynb
data/evals/basic/: gemma3:1b.json  gemma3:4b.json  granite3.3:2b.json  phi4-mini:3.8b.json  qwen3:1.7b.json  qwen3:4b.json  test_model.json
data/evals/vector_rag/: gemma3:1b.json
data/evals/vector_rag/strategy_baseline/: gemma3:1b.json  gemma3:4b.json  granite3.3:2b.json  phi4-mini:3.8b.json  qwen3:1.7b.json  qwen3:4b.json
data/evals/vector_rag/strategy_with_reranking/: gemma3:1b.json  gemma3:4b.json  granite3.3:2b.json  phi4-mini:3.8b.json  qwen3:1.7b.json  qwen3:4b.json
data/evals/vector_rag/strategy_with_reranking_with_basic_chunking/: gemma3:1b.json  gemma3:4b.json  granite3.3:2b.json  phi4-mini:3.8b.json  qwen3:1.7b.json  qwen3:4b.json
data/processed/: ap_history_concepts.json  ap_history_concepts_basic_chunking.json  ap_history_qa.json
docs/assets/: Diagrams.excalidraw
evaluator/: basic.py
models/: qa.py
src/evaluator/: basic.py  data.py  llm.py  loader.py  main.py  renderer.py  utils.py
src/evaluator/data/: file_io.py  vector_search.py
src/evaluator/evals/: basic.py  scoring.py  vector_rag.py
src/evaluator/models/: llm.py  qa.py
tests/: test_loader.py  test_vector_eval.py
tests/evals/: test_base_eval.py  test_vector_eval.py
