[project]
name = "knowledge-evaluations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.74.4",
    "pydantic>=2.11.7",
    "pypdf>=5.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.3",
]
