[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project]
name = "evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "litellm>=1.74.4",
    "pydantic>=2.11.7",
    "pypdf>=5.8.0",
    "ratelimit>=2.2.1",
    "rich>=14.0.0",
    "sentence-transformers>=5.0.0,<6.0.0",
    "unstructured[pdf]>=0.18.11",
]

[project.scripts]
"evaluator" = "evaluator.main:main"
"pre-process-data" = "evaluator.main:pre_process_data"

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "mypy>=1.17.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
]

[tool.pytest.ini_options]
addopts = "--cov=evaluator --cov-report xml"

[tool.coverage.run]
source = ["evaluator"]
branch = true
relative_files = true
omit = [
    ".venv/*",
    "**/__init__.py",
    "tests/*",
    "**/main.py"
]